fix: add margin-bottom to menu card for improved spacing

--- a/scss/pages/_day-menu.scss
+++ b/scss/pages/_day-menu.scss
@@ -1132,6 +1132,7 @@
   .menu-card {
     min-height: 0;
     padding: 16px 0 0;
+    margin-bottom: 10px;
     order: 2;
 
     &__title {
